<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="rta_dialog_title">Rate this app</string>
    <string name="rta_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? Thank you for your support!</string>
    <string name="rta_dialog_ok">Rate now</string>
    <string name="rta_dialog_cancel">Later</string>
    <string name="rta_dialog_no">No, thanks</string>

    <string name="app_name">Teradata Quiz</string>

    <string name="hello_world">Hello world!</string>
    <string name="play_quiz">Play Quiz</string>
    <string name="sound">Sound</string>
    <string name="show_explanation">Show Explanation</string>
    <string name="remove_adds">Remove Ads</string>
    <string name="restore">Restore</string>
    <string name="Rs">\u20B9</string>
    <string name="simple_description">simple_image</string>

    <!-- Twitter Configurations -->
    <string name="twitter_callback">https://www.dwhpro.com</string>
    <string name="twitter_consumer_key">YFpJPdBaGeCZLNHOSfw4z9158</string>
    <string name="twitter_consumer_secret">QSUdZbagE1A2OBNP75KWArMJv466QGapRGpQ85pLjwJjuvJbni</string>
    <string name="twitter_oauth_verifier">15198624-MM6ynmLon9Viba2mxIlkCEpA8pc0IyYWwr2VAxAwB</string>

    <!-- fb app id -->
    <string name="facebook_app_name">TeradataQuiz</string>
    <string name="app_id_fb">701562343388055</string>


    <string name="appSignature">eHjxVswWADLg7wWliiVzkJjArHM=</string>

    <!--Add Ad units here-->
    <string name="ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>

    <string name="exception">Exception: %1$s</string>

    <string name="game_title">Quiz</string>
    <string name="game_blurb">A sample game</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign out</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>

    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick match</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_our_quizapp_app">Quiz App multiplayer!</string>
    <string name="check_games">Check matches</string>
    <string name="start_match">Play now</string>
    <string name="turn_counter">Turn counter</string>


    <string name="status_multiplayer_error_not_trusted_tester">Anyone you invite must be a trusted tester</string>
    <string name="match_error_already_rematched">This rematch has already been started!</string>
    <string name="client_reconnect_required">Games client reconnect required</string>
    <string name="network_error_operation_failed">Network error: Operation failed</string>
    <string name="internal_error">Internal error</string>
    <string name="unexpected_status">Unexpected status</string>
    <string name="match_error_inactive_match">This match is inactive.</string>
    <string name='match_error_locally_modified'>This match has locally-modified data. This operation cannot be performed until the match is sent to the server.</string>

    <!-- Leaderboard -->
    <string name="leaderboards_not_available">Please sign in to view leaderboards.</string>

    <!--app font name-->
    <string name="app_font_face">fonts/HelveticaNeue Thin.ttf</string>
    <string name="app_header_font_face">fonts/HelveticaNeue Thin.ttf</string>
    <string name="play_now">Play now</string>
    <string name="matches">Matches</string>
    <string name="multiplayer_1_to_1">Multiplayer 1 to 1</string>
    <string name="settings">Settings</string>
    <string name="rematch">Rematch</string>
    <string name="new_match">New match</string>
    <string name="skip">Skip</string>
    <string name="no_internet_message">No internet!</string>
    <string name="app_medium_font_face">fonts/HelveticaNeue Medium.ttf</string>
    <string name="app_light_font_face">fonts/HelveticaNeue Light.ttf</string>
    <string name="Wrong">Wrong</string>
    <string name="Correct">Correct</string>
    <string name="sign_in_to_continue">Sign in to Google Play Services to continue!</string>
    <string name="sign_in">Sign in</string>
    <string name="not_thanks">No, thanks</string>
    <string name="world_score">World Score</string>
    <string name="sign_in_to_post_score">Sign in to Google Play Services to post your scores to leaderboards!</string>
    <string name="high_scores">High Scores</string>
    <string name="wlcome">Welcome :</string>
    <string name="invitation_arrived_from">"An invitation has arrived from "</string>
    <string name="invitation_removed">An invitation was removed.</string>
    <string name="match_was_updated">A match was updated.</string>
    <string name="match_was_removed">A match was removed.</string>
    <string name="waiting_for_opponents_turn">Waiting for opponent\'s Turn!</string>
    <string name="this_match_expired">This match expired!</string>
    <string name="this_match_was_canceled">This match was canceled!</string>
    <string name="sorry_seems_to_be_a_problem">Sorry, there seems to be a problem. Please try again later.</string>
    <string name="about">About</string>
    <string name="Achivements">Achievements</string>
    <string name="Leaderboards">Leaderboards</string>
    <string name="invitation_title">Share this App</string>
    <string name="invitation_message">Share the Teradata Quiz with your friends</string>
    <string name="invitation_deep_link">www.dwhpro.com</string>
    <string name="invitation_cta">Get it now!</string>
    <string name="share">Share Now!</string>


</resources>
