<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quiz_bg"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_size" >

        <LinearLayout
            android:id="@+id/home_image_world_score"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="@dimen/title_bar_button_size"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/left_margin"
                android:src="@drawable/home" />
        </LinearLayout>

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/world_score"
            android:textColor="@color/app_text_color"
            android:textSize="@dimen/title_text_size" />

        <ImageView
            android:id="@+id/info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="@dimen/right_margin"

            android:src="@drawable/infobtn"
            android:visibility="invisible" />
    </RelativeLayout>


    <!-- Options screens -->

    <LinearLayout
        android:id="@+id/option_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"

        android:gravity="center_vertical|center_horizontal">

        <LinearLayout
            android:id="@+id/achievement_button"
            android:layout_width="@dimen/play_button_width"
            android:layout_height="@dimen/play_button_height"
            android:background="@drawable/button_state"
            android:orientation="horizontal"

            >

            <ImageView
                android:layout_width="@dimen/play_button_icon_size"
                android:layout_height="@dimen/play_button_icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/left_margin"
                android:src="@drawable/achievements_ic" />

            <TextView
                android:id="@+id/achievement_textview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:paddingLeft="@dimen/left_margin_extra"
                android:text="@string/Achivements"
                android:textColor="@color/app_text_color"
                android:textSize="@dimen/play_quiz_button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/leaderboards_button"
            android:layout_width="@dimen/play_button_width"
            android:layout_height="@dimen/play_button_height"
            android:background="@drawable/button_state_two"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/play_button_icon_size"
                android:layout_height="@dimen/play_button_icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/left_margin"
                android:src="@drawable/leaderboards_ic" />

            <TextView
                android:id="@+id/leaderboards_textview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:paddingLeft="@dimen/left_margin_extra"
                android:text="@string/Leaderboards"
                android:textColor="@color/app_text_color"
                android:textSize="@dimen/play_quiz_button_text_size" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/sign_in_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/quiz_bg"
        android:layout_below="@+id/title_layout"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/sign_in_display_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_continue"
            android:gravity="center"
            android:textSize="@dimen/question_text_size"
            android:textColor="@color/app_text_color"
            android:layout_marginBottom="@dimen/common_margin"
            />
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sign_in"
            android:background="@drawable/button_one"
            android:textSize="@dimen/question_text_size"
            android:textColor="@color/app_text_color"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/common_margin"
            />

        <Button
            android:id="@+id/no_thanks_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/not_thanks"
            android:background="@drawable/button_one"
            android:textSize="@dimen/question_text_size"
            android:textColor="@color/app_text_color"
            android:textAllCaps="false"
            />
    </LinearLayout>

</RelativeLayout>
